@@ -23,9 +23,6 @@ The authors of this program may be contacted at http://forum.princed.org
 #include <setjmp.h>
 #include <math.h>
 
-// data:009C
-word cheats_enabled = 0;
-
 // data:461E
 dat_type * dathandle;
 
